# pdfAgentDemo

./: .gitignore  README.md  repostructure.md  requirements.txt
backend/: pyproject.toml  requirements.txt
backend/migrations/: env.py
backend/migrations/versions/: 1e5a233dc4cf_rename_metadata_id_to_doc_metadata_id.py  add_original_queries_table.py  add_summary_embedding.py  be905c821acd_add_context_sets_table.py  fix_sub_queries_original_query_reference.py  remove_workflow_tables.py  update_query_embeddings.py  update_sub_query_embeddings.py
backend/src/: main.py
backend/src/api/: dependencies.py
backend/src/api/v1/: __init__.py  documents.py
backend/src/core/: config.py  database.py  di.py  llm_service.py
backend/src/core/llm/: interfaces.py  prompts.py  providers.py
backend/src/domain/: __init__.py  agentic_chunker.py  embedding_generator.py  exceptions.py  interfaces.py  pdf_processor.py  query_processor.py  semantic_text_splitter.py  stepback_agent.py  workflow.py
backend/src/domain/agents/: __init__.py  base_agent.py  citation_agent.py  context_builder_agent.py  query_analyzer_agent.py  query_synthesizer_agent.py  recursive_summarization_agent.py
backend/src/models/: base.py  document.py  document_processing.py  workflow.py
backend/src/repositories/: __init__.py  base.py  citation_repository.py  context_repository.py  document_repository.py  enums.py  query_repository.py  workflow_repository.py
backend/src/schemas/: document.py  query_synthesis.py  rag.py
backend/src/services/: __init__.py  document_service.py
docs/: architecture.md
(+23 files in other folders)
